Fix up items wrapping when there's no linebreaks.

--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -199,6 +199,8 @@
 	}
 
 	.sui-pagination-active-filters {
+		display: flex;
+		flex-flow: row wrap;
 
 		.sui-active-filter {
 			color: $white;
@@ -207,11 +209,8 @@
 			line-height: 16px;
 			border-radius: 4px;
 			background-color: #666666;
-			padding: 5px 0 5px 10px;
-			white-space: nowrap;
-			max-width: 240px;
-			text-overflow: ellipsis;
-			margin-right: 10px;
+			padding: 4px 0 4px 10px;
+			margin: 4px 4px 0 0;
 
 			.sui-active-filter-remove {
 				cursor: pointer;
